--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,12 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cart.html">Carrito <span class="badge bg-secondary" id="cart-count">0</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Ingresar</a>  
+          </li>
         </ul>
       </div>
     </div>
