--- a/products.html
+++ b/products.html
@@ -33,6 +33,12 @@
           <li class="nav-item">
             <a class="nav-link" href="my-profile.html">Mi perfil</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cart.html">Carrito <span class="badge bg-secondary" id="cart-count">0</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Ingresar</a>  
+          </li>
         </ul>
       </div>
     </div>
