--- a/cart.html
+++ b/cart.html
@@ -30,12 +30,13 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html">Mi perfil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="cart.html">Carrito <span class="badge bg-secondary" id="cart-count">0</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Ingresar</a>  
+            <a class="nav-link"  id="login-button" href="login.html?redirect=cart.html">Ingresar</a>  
           </li>
         </ul>
       </div>
@@ -67,6 +68,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/loginlogic.js"></script>
 </body>
 
 </html>
