--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="cart.html">Carrito <span class="badge bg-secondary" id="cart-count">0</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Ingresar</a>  
+            <a class="nav-link" id="login-button" href="login.html?redirect=index.html">Ingresar</a>
           </li>
         </ul>
       </div>
@@ -95,6 +95,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/loginlogic.js"></script>
 </body>
 
 </html>
