--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
       </div>
     </div>
+    <button class="btn btn-primary" id="login-button" type="button">Ingresar</button>
   </main>
   <footer class="text-muted">
     <div class="container">
