--- a/my-profile.html
+++ b/my-profile.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="cart.html">Carrito <span class="badge bg-secondary" id="cart-count">0</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Ingresar</a>  
+            <a class="nav-link" id="login-button" href="login.html?redirect=my-profile.html">Ingresar</a>  
           </li>
         </ul>
       </div>
@@ -75,6 +75,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
+  <script src="js/loginlogic.js"></script>
 </body>
 
 </html>
