--- a/sell.html
+++ b/sell.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="cart.html">Carrito <span class="badge bg-secondary" id="cart-count">0</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Ingresar</a>  
+            <a class="nav-link" id="login-button" href="login.html?redirect=sell.html">Ingresar</a>  
           </li>
         </ul>
       </div>
@@ -232,6 +232,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="js/loginlogic.js"></script>
 </body>
 
 </html>
