--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                 <button type="submit" class="btn">Iniciar sesión</button>
             </form>
 
-            <p class="register mt-3">¿No tienes una cuenta? <a href="#">Regístrate Aquíi</a></p>
+            <p class="register mt-3">¿No tienes una cuenta? <a href="#">Regístrate Aquí</a></p>
         </div>
     </div>
 </main>
